--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="clock ">
     <div class="time"></div>
     <div class="date-time"></div>
+    <!-- My Name -->
     <p class="mt-3 me"><span class="text-danger">M</span>ahrous Gamal</p>
   </div>
   
